src2/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Called__c</fullName>
        <label>Called</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inbound_Main_Type__c</fullName>
        <formula>IF(OR(ISPICKVAL(Inbound_Type__c, &quot;Case created&quot;),ISPICKVAL(Inbound_Type__c, &quot;Case management&quot;)),
&apos;Salesforce Case&apos;,
IF(ISPICKVAL(Inbound_Type__c, &quot;Order&quot;),
&apos;Order&apos;,
IF(ISPICKVAL(Inbound_Type__c, &quot;Complaint&quot;),
&apos;Complaint&apos;,
IF(OR(ISPICKVAL(Inbound_Type__c, &quot;Marketing &amp; Promotion&quot;),ISPICKVAL(Inbound_Type__c, &quot;Finance&quot;),ISPICKVAL(Inbound_Type__c, &quot;Subscription&quot;),ISPICKVAL(Inbound_Type__c, &quot;Other&quot;)),
&apos;Information&apos;,
IF(ISPICKVAL(Inbound_Type__c, &quot;New Customer&quot;),
&apos;New Customer&apos;,
&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Main Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Type__c</fullName>
        <label>Inbound Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case created</fullName>
                </value>
                <value>
                    <fullName>Case management</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Promotion</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ActionStatus__c</fullName>
        <label>Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_SmsMessageId__c</fullName>
        <label>Sms Message Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUI__c</fullName>
        <label>UUI</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>